[gd_scene load_steps=8 format=3 uid="uid://dmbgkctc2vsd1"]

[ext_resource type="Texture2D" uid="uid://bty6daxt1fvkr" path="res://icon.svg" id="1_32lkt"]
[ext_resource type="Script" uid="uid://gty381a31331" path="res://scenes/player/character_body_2d.gd" id="1_duj78"]
[ext_resource type="Texture2D" uid="uid://dgy42unhqu3vd" path="res://assets/test assets/testPotion/fireAOE.png" id="3_uoqog"]
[ext_resource type="Texture2D" uid="uid://c6g7hahd8meul" path="res://assets/test assets/testPotion/frostAOE.png" id="4_d4mfp"]
[ext_resource type="Texture2D" uid="uid://ow6yp76ws3x" path="res://assets/test assets/testPotion/poisonAOE.png" id="5_iux3d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duj78"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_duj78"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
top_level = true
script = ExtResource("1_duj78")
dash_duration = 0.1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15625, 0.15625)
texture = ExtResource("1_32lkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_duj78")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_duj78")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.855, 2.855)

[node name="prjct_rel" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = -37.0
offset_top = -28.0
offset_right = 17.0
offset_bottom = -16.0
scale = Vector2(1.36189, 1.35932)

[node name="Button1" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 2.99434
offset_top = 2.0
offset_right = 42.9943
offset_bottom = 42.0
scale = Vector2(0.205161, 0.200952)
icon = ExtResource("3_uoqog")

[node name="Button2" type="Button" parent="Panel"]
offset_left = 13.0
offset_top = 2.0
offset_right = 53.0
offset_bottom = 42.0
scale = Vector2(0.205161, 0.200952)
icon = ExtResource("4_d4mfp")

[node name="Button3" type="Button" parent="Panel"]
offset_left = 23.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 42.0
scale = Vector2(0.205161, 0.200952)
icon = ExtResource("5_iux3d")

[node name="Button4" type="Button" parent="Panel"]
offset_left = 33.0
offset_top = 2.0
offset_right = 73.0
offset_bottom = 42.0
scale = Vector2(0.205161, 0.200952)

[node name="Button5" type="Button" parent="Panel"]
offset_left = 43.0
offset_top = 2.0
offset_right = 83.0
offset_bottom = 42.0
scale = Vector2(0.205161, 0.200952)

[connection signal="timeout" from="prjct_rel" to="." method="_on_prjct_rel_timeout"]
[connection signal="pressed" from="Panel/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/Button5" to="." method="_on_button_5_pressed"]
